Bug 694858 - Transparency problems
Summary: Transparency problems
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Images (show other bugs)
Version: master
Hardware: All All
: P4 normal
Assignee: Michael Vrhel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-20 04:29 UTC by Robin Watts
Modified: 2013-12-23 12:15 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments
list_of_affected_files.txt (573.23 KB, text/plain)
2013-12-20 04:29 UTC, Robin Watts
Details
ev3.pdf (845 bytes, application/pdf)
2013-12-20 10:26 UTC, Robin Watts
Details
0001-Pass-on-an-error-code-rather-than-ignore-it.patch (1.21 KB, patch)
2013-12-20 10:27 UTC, Robin Watts
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Robin Watts 2013-12-20 04:29:17 UTC
Created attachment 10490 [details]
list_of_affected_files.txt

(No "Transparency" component, so I've assigned this to Images so it goes to Michael)

In gdevp14.c there is a call to pdf14_update_device_color_procs_push_c. The return value to this is not checked.

If we add code to make it check, a la:

                    code = pdf14_update_device_color_procs_push_c(dev,
                                  pdf14pct->params.group_color,
                                  pdf14pct->params.icc_hash, pis,
                                  pdf14pct->params.iccprofile);
                    if (code < 0)
                        return code;

Then the cluster reports many failures. On at least some of the cases this is because pdf14pct->params.group_color is UNKNOWN. This returns a rangecheck.

This causes both differences, and it seems, SEGVs.
Comment 1 Robin Watts 2013-12-20 10:26:27 UTC
Created attachment 10491 [details]
ev3.pdf

Drastically simplified file that shows the problem.
Comment 2 Robin Watts 2013-12-20 10:27:19 UTC
Created attachment 10492 [details]
0001-Pass-on-an-error-code-rather-than-ignore-it.patch

Patch to show the problem.