Bug 694858: Add some missing error handling.

This solves at least some of the SEGVs.